tests/dataset/tpc-ds/compiler/pl/q14.error
run: exit status 2
[]
ERROR: /tmp/q14.pl:64: user:main Unknown message: error('expect failed')
